--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -148,27 +148,29 @@
    </div>
     {% include include-scripts.html %}
     <script>
-      $('.review-carousel').slick({
-        "autoplay": false,
-        "draggable": false,
-        "dots": true,
-        "prevArrow": $('.navigation-arrow-left'),
-        "nextArrow": $('.navigation-arrow-right')
-      })
-      function initHomeMap() {
-        var uluru = {lat: 33.979449, lng: -118.413002};
-        var map = new google.maps.Map(document.getElementById('contact-us-gmap'), {
-          zoom: 14,
-          scrollwheel: false,
-          disableDefaultUI: true,
-          // center: uluru
-          center: {lat: 33.979449, lng: -118.44}
+      $(document).ready(function() {
+        $('.review-carousel').slick({
+          "autoplay": false,
+          "draggable": false,
+          "dots": true,
+          "prevArrow": $('.navigation-arrow-left'),
+          "nextArrow": $('.navigation-arrow-right')
+        })
+        function initHomeMap() {
+          var uluru = {lat: 33.979449, lng: -118.413002};
+          var map = new google.maps.Map(document.getElementById('contact-us-gmap'), {
+            zoom: 14,
+            scrollwheel: false,
+            disableDefaultUI: true,
+            // center: uluru
+            center: {lat: 33.979449, lng: -118.44}
         });
         var marker = new google.maps.Marker({
           position: uluru,
           map: map
         });
-      }
+        }
+      })
     </script>
     <!-- TODO replace API key -->
     <script async defer
