--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 
-<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0">
+<body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="color: black; font-size: 16px;">
   <table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#f9f9f9" style="margin:0px; padding:0px">
     <tr>
       <td>
@@ -40,9 +40,6 @@
               <div class="listing-label-newsletter rent-label">For Sale</div>
               {% endif %}
               <img src="{{page.property-header}}" style="max-width:900px;" id="headerImage" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
-              <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html">
-                <div class="details-button">View Details</div>
-              </a>
             </td>
           </tr>
         </table>
@@ -51,12 +48,15 @@
     <tr>
       <td align="center" valign="top">
         <!-- BEGIN BODY // -->
-        <table border="0" cellpadding="0" cellspacing="0" width="900px" class="table">
+        <table border="0" cellpadding="0" cellspacing="0" width="900px" class="table table__caption">
           <tr>
             <td width="50px"></td>
             <td width="800px" valign="top" class="bodyContent">
-              <span class="address-newsletter">{{page.address-line-1}}</span>
-              <span class="address_city"><b>{{page.address-line-2}}</span>
+              <a href="{{site.data.contact.url}}/listings/{{page.title}}/listing.html">
+                <div class="details-button">View Details</div>
+              </a>
+              <span class="address-newsletter uppercase">{{page.address-line-1}}</span>
+              <span class="address_city uppercase"><b>{{page.address-line-2}}</span>
                 {{page.info-text}}
               </td>
               <td width="50px"></td>
@@ -86,11 +86,13 @@
               <tr>
                 <td width="50px"></td>
                 <td width="400px" valign="top" class="bodyContent border-right border-bottom">
-                  <img src="/images/newsletter/img/gs-newsletter-icon-1.png" width="45" height="45" alt="Rate" /> <span class="amenities">{{page.rate}}</span>
+                  <img src="/images/newsletter/img/gs-newsletter-icon-1.png" width="45" height="45" alt="Rate" />
+                  <span class="amenities"><span class="strong">{{page.rate}}</span></span>
                   <span class="amenities2">(taxes are $0.07 PSF)</span>
                 </td>
-                <td width="400px" valign="top" class="bodyContent border-bottom">
-                  <img src="/images/newsletter/img/gs-newsletter-icon-2.png" width="45" height="45" alt="Rate" /> <span class="amenities">{{page.sq-footage}} SF</span>
+                <td width="400px" valign="top" class="bodyContent border-bottom padding-left">
+                  <img src="/images/newsletter/img/gs-newsletter-icon-2.png" width="45" height="45" alt="Rate" />
+                  <span class="amenities"><span class="strong">{{page.sq-footage}}</span> SF</span>
                 </td>
                 <td width="50px"></td>
               </tr>
@@ -98,12 +100,12 @@
                 <td width="50px"></td>
                 <td width="400px" valign="top" class="bodyContent border-right">
                   <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
-                  <span class="amenities"><strong>Available:</strong>January 1, 2018</span>
+                  <span class="amenities"><span class="strong">Available:</span> January 1, 2018</span>
                   <span class="amenities2"></span>
                 </td>
-                <td width="400px" valign="top" class="bodyContent">
+                <td width="400px" valign="top" class="bodyContent padding-left">
                   <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
-                  <span class="amenities"><strong>{{page.parking}} Spaces</span>
+                  <span class="amenities"><strong><span class="strong">{{page.parking}}</span> Spaces</span>
                   </td>
                   <td width="50px"></td>
                 </tr>
@@ -113,7 +115,7 @@
                   <td width="50px"></td>
                   <td width="800px">
                     <span class="list-header">BUILDING HIGHLIGHTS</span>
-                    <ul class="list">
+                    <ul>
                       {% for highlight in page.highlights %}
                       <li>{{ highlight }}</li>
                       {% endfor %}
@@ -154,37 +156,37 @@
               <table border="0" cellpadding="8" cellspacing="0" width="900px" class="table table__footer">
                 <tr>
                   <td width="50px"></td>
-                  <td class="footer-header" width="75px"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
-                  <td width="150px"></td>
-                  <td class="footer-header" width="75px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
+                  <td width="150px" class="footer-header"><a href="{{site.contact.url}}/listings.html">LISTINGS</a></td>
+                  <td width="300px"></td>
+                  <td class="footer-header" width="150px"><a href="{{site.contact.url}}/experience.html">EXPERIENCE</a></td>
+                   <td width="50px"></td>
+                </tr>
+                <tr>
+                  <td width="50px"></td>
+                  <td width="150px"><a href="{{site.contact.url}}/listings.html?type=buy">Properties For Sale</a></td>
+                  <td width="300px"></td>
+                  <td width="150px"><a href="{{site.contact.url}}/experience.html?section=studies">Case Studies</a></td>
                   <td width="50px"></td>
                 </tr>
                 <tr>
                   <td width="50px"></td>
-                  <td width="75px"><a href="{{site.contact.url}}/listings.html?type=buy">Properties For Sale</a></td>
-                  <td width="150px"></td>
-                  <td width="75px"><a href="{{site.contact.url}}/experience.html?section=studies">Case Studies</a></td>
+                  <td width="150px"><a href="{{site.contact.url}}/listings.html?type=lease">Properties For Lease</a></td>
+                  <td width="300px"></td>
+                  <td width="150px"><a href="{{site.contact.url}}/index.html?section=testimonials">Testimonials</a></td>
                   <td width="50px"></td>
                 </tr>
                 <tr>
                   <td width="50px"></td>
-                  <td width="75px"><a href="{{site.contact.url}}/listings.html?type=lease">Properties For Lease</a></td>
-                  <td width="150px"></td>
-                  <td width="75px"><a href="{{site.contact.url}}/index.html?section=testimonials">Testimonials</a></td>
+                  <td class="footer-header" width="150px"><a href="{{site.contact.url}}/about.html">ABOUT</a></td>
+                  <td width="300px"></td>
+                  <td class="footer-header" width="150px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
                   <td width="50px"></td>
                 </tr>
                 <tr>
                   <td width="50px"></td>
-                  <td class="footer-header" width="75px"><a href="{{site.contact.url}}/about.html">ABOUT</a></td>
+                  <td width="150px"><a href="{{site.contact.url}}/about.html?section=team">Meet the Team</a></td>
+                  <td width="300px"></td>
                   <td width="150px"></td>
-                  <td class="footer-header" width="75px"><a href="{{site.contact.url}}/index.html?section=contact">CONTACT</a></td>
-                  <td width="50px"></td>
-                </tr>
-                <tr>
-                  <td width="50px"></td>
-                  <td width="75px"><a href="{{site.contact.url}}/about.html?section=team">Meet the Team</a></td>
-                  <td width="150px"></td>
-                  <td width="75px"></td>
                   <td width="50px"></td>
                 </tr>
                 </tr>
