--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -29,14 +29,11 @@
   text-align:left;
 }
 .bodyContent{
-  color:#737373;
   font-family:'Lato', sans-serif;
-  font-size:20px;
   line-height:140%;
   padding-top:20px;
   padding-right:50px;
   padding-bottom:20px;
-  padding-left:50px;
   /*@editable*/ text-align:left;
 }
 .amenities {
@@ -65,20 +62,18 @@
   position: relative;
 }
 .details-button {
-  position: absolute;
-  bottom: 5px;
-  left: 33px;
-  width: 220px;
+  width: 251px;
   border-radius: 500px;
-  margin-top: 22px;
+  margin-top: -15px;
+  margin-bottom: 15px;
   font-weight: 500;
-  font-size: 22px;
+  font-size: 19px;
   color: white;
   background-color: #d46049;
   border-color: #c04d3a;
   border-style: solid;
   border-width: thin;
-  padding: 16px 26px;
+  padding: 11px 26px;
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
@@ -128,7 +123,6 @@
 }
 
 .highlights__table {
-  font-size: 22px;
   padding: 18px 0;
 }
 
@@ -138,15 +132,32 @@
   color: white;
 }
 
+.table__caption {
+  background: linear-gradient(to bottom, #d4d2d3, white);
+}
+
 .list-header {
   font-weight: 800;
+  font-size: 16px;
 }
 
 .footer-header {
   font-weight: 800;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .phone-icon {
   margin-right: 6px;
+}
+
+.padding-left {
+  padding-left: 24px;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.strong {
+  color: black;
 }
