--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,8 @@
     </div>
     <div class="column">
       <div class="title"><a href="/listings.html">LISTINGS</a></div>
-      <a href="/listings.html?type=buy">Listings For Sale</a>
-      <a href="/listings.html?type=lease">Listings For Lease</a>
+      <!-- <a href="/listings.html?type=buy">Listings For Sale</a>
+      <a href="/listings.html?type=lease">Listings For Lease</a> -->
     </div>
     <div class="column">
       <div class="title"><a href="/experience.html">EXPERIENCE</a></div>
@@ -23,31 +23,19 @@
     <div class="column">
       <div class="title "><a href="https://ws.onehub.com/" target="_blank">CLIENT ACCESS</a></div>
     </div>
-
-    <!-- <div class="column social">
-      <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
-        <img src="/images/social/i.svg"/>
-      </a>
-      <a href="https://www.twitter.com/{{site.data.contact.twitter}}" target="_blank">
-        <img src="/images/social/t.svg"/>
-      </a>
-      <a href="https://www.facebook.com/{{site.data.contact.facebook}}" target="_blank">
-        <img src="/images/social/f.svg"/>
-      </a>
-    </div> -->
     <div class="column copyright">
       Copyright &copy; GroundSource
     </div>
   </div>
   <div class="column social">
-      <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
-        <img src="/images/social/i.svg"/>
-      </a>
-      <a href="https://www.twitter.com/{{site.data.contact.twitter}}" target="_blank">
-        <img src="/images/social/t.svg"/>
-      </a>
-      <a href="https://www.facebook.com/{{site.data.contact.facebook}}" target="_blank">
-        <img src="/images/social/f.svg"/>
-      </a>
-    </div>
+    <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
+      <img src="/images/social/i.svg"/>
+    </a>
+    <a href="https://www.twitter.com/{{site.data.contact.twitter}}" target="_blank">
+      <img src="/images/social/t.svg"/>
+    </a>
+    <a href="https://www.facebook.com/{{site.data.contact.facebook}}" target="_blank">
+      <img src="/images/social/f.svg"/>
+    </a>
+  </div>
 </div>
