--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -891,18 +891,6 @@ a {
   background-color: $primary-color-lighter;
 }
 
-.social {
-  position: absolute;
-  right: 20px;
-  bottom: 60px;
-  font-size: 1.5em;
-  text-align: right;
-  line-height: 1;
-  a {
-    padding: 0.5em;
-    padding-right: 0;
-  }
-}
 .footer {
   .inner {
     max-width: $page-max-width;
@@ -946,8 +934,9 @@ a {
       opacity: .7;
     }
     &.social {
-      float: right;
-      margin-right: 20px;
+      position: absolute;
+      top: 0;
+      right: 0;
       font-size: 1.5em;
       text-align: right;
       line-height: 1;
@@ -1416,7 +1405,10 @@ a {
       &.social {
         margin: 25px 0 0 -9px;
         display: block;
-        float: left;
+        right: 20px;
+        bottom: 60px;
+        top: auto;
+        left: auto;
         > a {
           float: left;
           padding-right: 12px;
