--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -98,35 +98,37 @@
             </div>
             <div class="container">
               <div id="listings-sidebar">
-                <div class="menu-top">
-                  <div class="buttons">
-                    <a class="cool-button contact-us-link">CHECK AVAILABILITY</a>
-                    <a id="print-brochure" href="#" class="cool-button">PRINT BROCHURE</a>
+                <div class="listings-sidebar__inner">
+                  <div class="menu-top">
+                    <div class="buttons">
+                      <a class="cool-button contact-us-link">CHECK AVAILABILITY</a>
+                      <a id="print-brochure" href="#" class="cool-button">PRINT BROCHURE</a>
+                    </div>
                   </div>
-                </div>
-                <div class="menu">
-                  <h2 class="sidebar-header"><strong>ADDRESS</strong></h2>
-                  <hr class="light-line">
-                  <div class="listing-info">
-                    <div>{{page.address-line-1}}</div>
-                    <div>{{page.address-line-2}}</div>
-                  </div>
-                  <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
-                  <hr class ="light-line">
-                  <ul class="amenity-list">
-                    {% for highlight in page.highlights %}
-                      <li class="listing-info">{{ highlight }}</li>
+                  <div class="menu">
+                    <h2 class="sidebar-header"><strong>ADDRESS</strong></h2>
+                    <hr class="light-line">
+                    <div class="listing-info">
+                      <div>{{page.address-line-1}}</div>
+                      <div>{{page.address-line-2}}</div>
+                    </div>
+                    <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
+                    <hr class ="light-line">
+                    <ul class="amenity-list">
+                      {% for highlight in page.highlights %}
+                        <li class="listing-info">{{ highlight }}</li>
+                        <hr>
+                      {% endfor %}
+                    </ul>
+                    <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
+                    <hr class="light-line">
+                    <ul class="amenity-list">
+                      {% for amenity in page.amenities %}
+                      <li class="listing-info">{{ amenity }}</li>
                       <hr>
-                    {% endfor %}
-                  </ul>
-                  <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
-                  <hr class="light-line">
-                  <ul class="amenity-list">
-                    {% for amenity in page.amenities %}
-                    <li class="listing-info">{{ amenity }}</li>
-                    <hr>
-                    {% endfor %}
-                  </ul>
+                      {% endfor %}
+                    </ul>
+                  </div>
                 </div>
               </div>
               <div id="listings-info">
