--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -4,7 +4,7 @@
   <head>
     {% include header-links.html %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Untitled Document</title>
+    <title>{{page.address-line-1}}</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <style type="text/css">
       a {
@@ -97,7 +97,7 @@
               <td width="50px"></td>
               <td width="400px" valign="top" class="bodyContent border-right">
                 <img src="/images/newsletter/img/gs-newsletter-icon-3.png" width="45" height="45" alt="Rate" />
-                <span class="newsletter-amenities"><span class="strong">Available:</span> {{page.date}}</span>
+                <span class="newsletter-amenities"><span class="strong">Available:</span> {{ page.date | date: "%m/%d/%Y" }}</span>
               </td>
               <td width="400px" valign="top" class="bodyContent">
                 <img src="/images/newsletter/img/gs-newsletter-icon-4.png" width="45" height="45" alt="Rate" />
