--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -57,7 +57,6 @@
     color: white;
     font-size: 2.4em;
     font-weight: 600;
-    margin: 0;
   }
   .link {
     @include expanding-hover($primary-color);
@@ -73,6 +72,8 @@
   }
   .description {
     color: white;
+    font-size: 1.1em;
+    opacity: 0.9;
   }
   .contact-us-button {
     color: white;
